// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error formatting error snapshot 1`] = `
"> 1 | unclosed {argument message
    |                    ^ Expected \\",\\" but \\"m\\" found."
`;

exports[`error formatting error snapshot 2`] = `
"> 1 | <Comp prop=\\"bar\\">foo</Comp>
    | ^ Expected \\"#\\", \\"'\\", \\"\\\\n\\", \\"{\\", argumentElement, double apostrophes, end of input, or tagElement but \\"<\\" found."
`;

exports[`error formatting error snapshot 3`] = `
"> 1 | <A.B>foo</A.B>
    | ^ Expected \\"#\\", \\"'\\", \\"\\\\n\\", \\"{\\", argumentElement, double apostrophes, end of input, or tagElement but \\"<\\" found."
`;

exports[`error formatting error snapshot 4`] = `
"  1 | 
> 2 |     {gender, select,
    |     ^^^^^^^^^^^^^^^^
> 3 |       male {He}
    | ^^^^^^^^^^^^^^^
> 4 |     }
    | ^^^^^^ A select element requires an \\"other\\"
  5 |   "
`;

exports[`error formatting error snapshot 5`] = `
"> 1 | <>foo {bar}</> baz
    | ^ Expected \\"#\\", \\"'\\", \\"\\\\n\\", \\"{\\", argumentElement, double apostrophes, end of input, or tagElement but \\"<\\" found."
`;

exports[`error formatting error snapshot 6`] = `
"> 1 | <hyphen-tag></hyphen-tag>
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ \\"hyphen-tag\\" is not a valid identifier"
`;
